--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
         <p class="firma">💖 Con cariño, tu amigo.</p>
 
         <div class="botones">
-            <button id="btnSi" onclick="mostrarSorpresa()">💖 Sí</button>
+            <button id="btnSi" onclick="mostrarMensaje()">💖 Sí</button>
             <button id="btnNo" onmouseover="moverBoton()" ontouchstart="moverBoton()">❌ No</button>
         </div>
 
-        <div id="sorpresa" class="oculto">
-            <img src="img/corazon.png" alt="Corazón">
-            <p>✨ ¡Gracias por ser parte de mi vida! ✨</p>
+        <div id="mensajeCariñoso" class="oculto">
+            <p>💖 ¡Sabía que dirías que sí! Eres una persona increíble, y espero que hoy sea un día hermoso para ti. 🌹✨</p>
         </div>
     </div>
     <script src="script.js"></script>
