--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>🌹 ¡Feliz 14 de Febrero! 🌹</h1>
         <p>¿Quieres ver un mensaje especial?</p>
         <button id="si" onclick="mostrarMensaje()">Sí</button>
-        <button id="no" onclick="moverNo()" onmouseover="moverNo()">No</button>
+        <button id="no" onclick="mostrarMensajeNo()">No</button>
 
         <!-- Modal -->
         <div id="modal" class="modal">
