--- a/index.html
+++ b/index.html
@@ -3,25 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feliz 14 de Febrero</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>San Valentín</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f1f1;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        .banner {
+            background-color: #ff99cc;
+            color: #fff;
+            padding: 20px;
+            font-size: 24px;
+            border-radius: 5px;
+            margin-bottom: 40px;
+        }
+        .button {
+            background-color: #ff3366;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #ff1a4d;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            margin: auto;
+            width: 50%;
+            max-width: 500px;
+        }
+        .close {
+            color: #aaa;
+            font-size: 28px;
+            font-weight: bold;
+            float: right;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>🌹 ¡Feliz 14 de Febrero! 🌹</h1>
-        <p>¿Quieres ver un mensaje especial?</p>
-        <button id="si" onclick="mostrarMensajeSi()">Sí</button>
-        <button id="no" onclick="mostrarMensajeNo()">No</button>
 
-        <!-- Modal -->
-        <div id="modal" class="modal">
-            <div class="modal-content">
-                <p id="mensaje"></p>
-                <button onclick="cerrarModal()">Cerrar</button>
-            </div>
-        </div>
+    <div class="banner">
+        ¡Feliz San Valentín! ❤️
     </div>
 
-    <script src="script.js"></script>
-</body>
-</html>
+    <button class="button" id="showMessagesBtn">¡Haz clic para ver mensajes graciosos!</button>
+
+    <!-- Modal -->
+    <div id="myMo
