--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Modal para Mensajes Bonitos -->
     <div id="myModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="cerrarModal()">&times;</span>
             <h2>Mensaje Bonito</h2>
             <p id="modalMessages">¡Tú eres la razón por la que sonrío todos los días!</p>
         </div>
@@ -26,7 +26,7 @@
     <!-- Modal para Mensajes Graciosos -->
     <div id="extraModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="cerrarModal()">&times;</span>
             <h2>Mensajes Graciosos</h2>
             <p id="modalExtraMessages"></p>
         </div>
