--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Enlace a Google Fonts para cambiar el tipo de letra -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
 </head>
 <body>
 
     <div class="container">
         <h1>¡Feliz San Valentín!</h1>
+        <img src="https://via.placeholder.com/150" alt="Imagen de San Valentín">
         <p>Haz clic para ver un mensaje especial</p>
 
         <button id="showMessagesBtn" class="btn">Ver Mensajes Bonitos</button>
