--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <div class="container">
         <h1>¡Feliz San Valentín!</h1>
         <img src="https://via.placeholder.com/150" alt="Imagen de San Valentín">
-        <p>Haz clic para ver un mensaje especial</p>
+        <p>Quiere ver un mensaje</p>
 
-        <button id="showMessagesBtn" class="btn">Ver Mensajes Bonitos</button>
-        <button id="showExtraMessagesBtn" class="btn">Ver Mensajes Graciosos</button>
+        <button id="showMessagesBtn" class="btn">Ver Si</button>
+        <button id="showExtraMessagesBtn" class="btn">Ver No</button>
     </div>
 
-    <!-- Modal para Mensajes Bonitos -->
+    <!-- Modal para Si -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('myModal')">&times;</span>
-            <h2>Mensaje Bonito</h2>
+            <h2>Si</h2>
             <p id="modalMessages"></p>
         </div>
     </div>
 
-    <!-- Modal para Mensajes Graciosos -->
+    <!-- Modal para No -->
     <div id="extraModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('extraModal')">&times;</span>
-            <h2>Mensajes Graciosos</h2>
+            <h2>No</h2>
             <p id="modalExtraMessages"></p>
         </div>
     </div>
