--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <div class="container">
         <h1>¡Feliz San Valentín!</h1>
-        <img src="https://via.placeholder.com/150" alt="Imagen de San Valentín">
-        <p>Quiere ver un mensaje</p>
+        <img src="https://png.pngtree.com/png-vector/20210116/ourmid/pngtree-happy-valentines-day-png-background-design-png-image_2753155.png" alt="Imagen de San Valentín">
+        <p>Quiere ver un mensaje?</p>
 
-        <button id="showMessagesBtn" class="btn">Ver Si</button>
-        <button id="showExtraMessagesBtn" class="btn">Ver No</button>
+        <button id="showMessagesBtn" class="btn">Si</button>
+        <button id="showExtraMessagesBtn" class="btn">No</button>
     </div>
 
     <!-- Modal para Si -->
