--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 
     <div class="container">
         <h1>¡Feliz San Valentín!</h1>
-        <img src="https://png.pngtree.com/png-vector/20210116/ourmid/pngtree-happy-valentines-day-png-background-design-png-image_2753155.png" alt="Imagen de San Valentín">
-        <p>Quiere ver un mensaje?</p>
+        <p>¿Quieres ver un mensaje?</p>
 
-        <button id="showMessagesBtn" class="btn">Si</button>
+        <button id="showMessagesBtn" class="btn">Sí</button>
         <button id="showExtraMessagesBtn" class="btn">No</button>
     </div>
 
-    <!-- Modal para Si -->
+    <!-- Modal para Sí -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('myModal')">&times;</span>
-            <h2>Si</h2>
+            <h2>Mensaje Bonito</h2>
             <p id="modalMessages"></p>
         </div>
     </div>
@@ -32,7 +31,7 @@
     <div id="extraModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('extraModal')">&times;</span>
-            <h2>No</h2>
+            <h2>Pregunta</h2>
             <p id="modalExtraMessages"></p>
         </div>
     </div>
