--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <span class="close" onclick="cerrarModal('extraModal')">&times;</span>
             <h2>Pregunta</h2>
             <p id="modalExtraMessages"></p>
+            <input type="text" id="answerInput" placeholder="Escribe tu respuesta aquí">
         </div>
     </div>
 
