--- a/index.html
+++ b/index.html
@@ -23,17 +23,7 @@
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('myModal')">&times;</span>
             <h2>Mensaje Bonito</h2>
-            <p id="modalMessages"></p>
-        </div>
-    </div>
-
-    <!-- Modal para No -->
-    <div id="extraModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="cerrarModal('extraModal')">&times;</span>
-            <h2>Pregunta</h2>
-            <p id="modalExtraMessages"></p>
-            <input type="text" id="answerInput" placeholder="Escribe tu respuesta aquí">
+            <p id="modalMessages">No soy experto en amor, pero tú y yo juntos eso sí que tiene sentido.</p>
         </div>
     </div>
 
