--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Enlace a Google Fonts para cambiar el tipo de letra -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
 </head>
 <body>
 
-    <div class="container">
+    <div id="section1" class="section">
         <h1>¡Feliz San Valentín!</h1>
         <p>¿Quieres ver un mensaje?</p>
-
         <button id="showMessagesBtn" class="btn">Sí</button>
         <button id="showExtraMessagesBtn" class="btn">No</button>
+        <button onclick="goToSection('section2')" class="btn">Continuar</button>
     </div>
 
-    <!-- Modal para Sí -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="cerrarModal('myModal')">&times;</span>
-            <h2>Mensaje Bonito</h2>
-            <p id="modalMessages">No soy experto en amor, pero tú y yo juntos eso sí que tiene sentido.</p>
-        </div>
+    <div id="section2" class="section" style="display:none;">
+        <h2>Mensaje Bonito</h2>
+        <p>No soy experto en amor, pero tú y yo juntos eso sí que tiene sentido.</p>
+        <button onclick="goToSection('section1')" class="btn">Regresar</button>
     </div>
+
+    <div class="hearts"></div>
 
     <script src="script.js"></script>
 </body>
