--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 
     <div class="hearts"></div>
 
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="cerrarModal('modal')">&times;</span>
+            <p>¿Estás segura de que no quieres ver el mensaje?</p>
+            <button id="modalYesBtn" class="btn">Sí</button>
+            <button id="modalNoBtn" class="btn">No</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
