--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="cerrarModal('modal')">&times;</span>
-            <p>¿Estás segura de que no quieres ver el mensaje?</p>
+            <p id="modalMessage">¿Estás segura de que no quieres ver el mensaje?</p>
             <button id="modalYesBtn" class="btn">Sí</button>
             <button id="modalNoBtn" class="btn">No</button>
+            <p id="errorMessage" style="display:none; color:red;"></p>
         </div>
     </div>
 
