--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <button id="showMessagesBtn" class="btn">Sí</button>
         <button id="showExtraMessagesBtn" class="btn">No</button>
         <button onclick="goToSection('section2')" class="btn">Continuar</button>
+        <button onclick="goToSection('intro')" class="btn">Regresar</button>
     </div>
 
     <div id="section2" class="section" style="display:none;">
         <h2>Mensaje Bonito</h2>
         <p>No soy experto en amor, pero tú y yo juntos eso sí que tiene sentido.</p>
         <button onclick="goToSection('section3')" class="btn">Continuar</button>
+        <button onclick="goToSection('section1')" class="btn">Regresar</button>
         <div id="hiddenArea" class="hidden-area">💖</div>
         <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se siente en su justo tiempo, como si el destino hubiera decidido pausarse solo para nosotros.</p>
     </div>
@@ -34,16 +36,19 @@
         <h2>Te quiero mucho enana</h2>
         <p>Espero que todo esto hubiera sido agradable para usted y espero que lo hubiera pasa bien.</p>
         <button onclick="goToSection('finalSurprise')" class="btn">¿Listo para la sorpresa final?</button>
+        <button onclick="goToSection('section2')" class="btn">Regresar</button>
     </div>
 
     <div id="finalSurprise" class="section" style="display:none;">
         <h2>Declaración de Amor</h2>
         <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar. ¡Feliz San Valentín!</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
+        <button onclick="goToSection('section3')" class="btn">Regresar</button>
     </div>
 
     <div id="thankYou" class="section" style="display:none;">
         <p>Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
+        <button onclick="goToSection('finalSurprise')" class="btn">Regresar</button>
     </div>
 
     <div class="hearts"></div>
