--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     </div>
 
     <div id="section2" class="section" style="display:none;">
-        <h2>Mensaje Bonito</h2>
-        <p>No soy experto en amor, pero tú y yo juntos eso sí que tiene sentido.</p>
-        <button onclick="goToSection('section3')" class="btn">Continuar</button>
+        <h2>Eres mi persona especial</h2>
+        <p>No soy experto en amor, pero tú y yo juntos, eso sí que tiene sentido.</p>
+        <button onclick="goToSection('section3')" class="btn">Siguiente</button>
         <button onclick="goToSection('section1')" class="btn">Regresar</button>
         <div id="hiddenArea" class="hidden-area">💖</div>
         <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se siente en su justo tiempo, como si el destino hubiera decidido pausarse solo para nosotros.</p>
     </div>
 
     <div id="section3" class="section" style="display:none;">
-        <h2>Te quiero mucho enana</h2>
-        <p>Espero que todo esto hubiera sido agradable para usted y espero que lo hubiera pasa bien.</p>
+        <h2>Un mensaje desde el corazón</h2>
+        <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.</p>
         <button onclick="goToSection('finalSurprise')" class="btn">¿Listo para la sorpresa final?</button>
         <button onclick="goToSection('section2')" class="btn">Regresar</button>
     </div>
 
     <div id="finalSurprise" class="section" style="display:none;">
-        <h2>Declaración de Amor</h2>
+        <h2>Mi confesión más sincera</h2>
         <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar. ¡Feliz San Valentín!</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
         <button onclick="goToSection('section3')" class="btn">Regresar</button>
@@ -57,8 +57,8 @@
             <span class="close" onclick="closeModal()">&times;</span>
             <p id="modalMessage">¿Estás segura de que no quieres ver el mensaje?</p>
             <button id="modalYesBtn" class="btn">Sí</button>
-           <p id="errorMessage" style="display:none; color:red;"></p>
             <button id="modalNoBtn" class="btn">No</button>
+            <p id="errorMessage" style="display:none; color:red;"></p>
         </div>
     </div>
 
