--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </div>
 
     <div id="thankYou" class="section" style="display:none;">
-        <p>Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
+        <div id="finalHiddenArea" class="hidden-area">💖</div>
+        <p id="finalSecretMessage" class="hidden-message">Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
         <button onclick="goToSection('finalSurprise')" class="btn">Regresar</button>
     </div>
 
