--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </div>
 
     <div id="thankYou" class="section" style="display:none;">
+        <p>Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
         <div id="finalHiddenArea" class="hidden-area">💖</div>
-        <p id="finalSecretMessage" class="hidden-message">Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
+        <p id="finalSecretMessage" class="hidden-message">Mi amor por ti es infinito y cada día crece más. Eres mi todo. 💘</p>
         <button onclick="goToSection('finalSurprise')" class="btn">Regresar</button>
     </div>
 
