--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="intro" class="section">
-        <h1 id="welcomeMessage">¡Bienvenida a tu página de San Valentín! 💖</h1>
+        <h1 id="welcomeMessage">Un Lugar Especial Solo para Usted 💖</h1>
         <button onclick="goToSection('section1')" class="btn">Haz clic para ver algo especial</button>
     </div>
 
@@ -32,14 +32,14 @@
     </div>
 
     <div id="section3" class="section" style="display:none;">
-        <h2>Un mensaje desde el corazón</h2>
+        <h2>Un mensaje desde el corazón <3</h2>
         <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.</p>
         <button onclick="goToSection('finalSurprise')" class="btn">¿Listo para la sorpresa final?</button>
         <button onclick="goToSection('section2')" class="btn">Regresar</button>
     </div>
 
     <div id="finalSurprise" class="section" style="display:none;">
-        <h2>Mi confesión más sincera</h2>
+        <h2>Un Sentimiento Hecho Palabras</h2>
         <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar. ¡Feliz San Valentín!</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
         <button onclick="goToSection('section3')" class="btn">Regresar</button>
