--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <div id="section3" class="section" style="display:none;">
         <h2>Agradecimiento por su tiempo</h2>
-        <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.T.Q.M Mi minions fv</p>
+        <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.T.Q.M 
+            Mi minions fv</p>
         <button onclick="goToSection('finalSurprise')" class="btn">¿Listo para la sorpresa final?</button>
         <button onclick="goToSection('section2')" class="btn">Regresar</button>
     </div>
