--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 
-    <div id="errorSection" class="section">
+    <div id="loadingSection" class="section">
+        <h1>Cargando...</h1>
+        <div class="loader"></div>
+    </div>
+
+    <div id="errorSection" class="section" style="display:none;">
         <h1>Error al cargar la página</h1>
         <p>Lo sentimos, algo salió mal. Redirigiendo en <span id="countdown">10</span> segundos...</p>
     </div>
@@ -37,22 +42,34 @@
         <button id="showMessagesBtn" class="btn">Sí</button>
         <button id="showExtraMessagesBtn" class="btn">No</button>
         <button onclick="goToSection('intro')" class="btn">Regresar</button>
+        <div class="hidden-code">4</div>
     </div>
 
     <div id="section2" class="section" style="display:none;">
         <h2>Eres mi persona especial</h2>
         <p>No soy experto en amor, pero tú y yo juntos, eso sí que tiene sentido.</p>
-        <button onclick="goToSection('section3')" class="btn">Siguiente</button>
-        <button onclick="goToSection('section1')" class="btn">Regresar</button>
         <div id="hiddenArea" class="hidden-area">💖</div>
         <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se siente en su justo tiempo, como si el destino hubiera decidido pausarse solo para nosotros.</p>
+        <button onclick="goToSection('section3')" class="btn">Siguiente</button>
+        <button onclick="goToSection('section1')" class="btn">Regresar</button>
+        <div class="hidden-code">2</div>
     </div>
 
     <div id="section3" class="section" style="display:none;">
         <h2>Un mensaje desde el corazón</h2>
         <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.</p>
-        <button onclick="goToSection('finalSurprise')" class="btn">¿Listo para la sorpresa final?</button>
+        <button onclick="showUnlockCode()" class="btn">¿Listo para la sorpresa final?</button>
         <button onclick="goToSection('section2')" class="btn">Regresar</button>
+        <div class="hidden-code">0</div>
+    </div>
+
+    <div id="unlockSection" class="section" style="display:none;">
+        <h2>Desbloquear Sorpresa</h2>
+        <p>Introduce el código de desbloqueo para continuar:</p>
+        <input type="text" id="unlockCodeInput" placeholder="Código de Desbloqueo">
+        <button onclick="checkUnlockCode()" class="btn">Desbloquear</button>
+        <p id="unlockErrorMessage" style="color:red; display:none;">Código incorrecto. Intenta nuevamente.</p>
+        <button onclick="goToSection('section3')" class="btn">Regresar</button>
     </div>
 
     <div id="finalSurprise" class="section" style="display:none;">
