--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <div id="loadingSection" class="section">
-        <h1>Cargando...</h1>
-        <div class="loader"></div>
+    <div id="errorSection" class="section">
+        <h1>Error al cargar la página</h1>
+        <p>Lo sentimos, algo salió mal. Redirigiendo en <span id="countdown">10</span> segundos...</p>
     </div>
 
     <div id="intro" class="section" style="display:none;">
