--- a/index.html
+++ b/index.html
@@ -8,26 +8,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
 </head>
 <body>
-    <div id="loadingSection" class="section">
-        <h1>Cargando...</h1>
-        <div class="loader"></div>
-    </div>
 
-    <div id="errorSection" class="section" style="display:none;">
-        <h1>Error 404</h1>
-        <p>No se cargaron bien los archivos. Por favor, intenta nuevamente más tarde.</p>
-    </div>
-
-    <div id="fakeIntro" class="section" style="display:none;">
-        <h1>Página en Mantenimiento</h1>
-        <p>Estamos realizando mejoras en el sitio. Por favor, intenta nuevamente más tarde.</p>
-        <button onclick="showAds()" class="btn">Intentar de nuevo</button>
-    </div>
-
-    <div id="adSection" class="section" style="display:none;">
-        <h1>Anuncio</h1>
-        <p>Anuncio falso. Haga clic para continuar.</p>
-        <button onclick="showFakeError()" class="btn">Continuar</button>
+    <div id="errorSection" class="section">
+        <h1>Error al cargar la página</h1>
+        <p>Lo sentimos, algo salió mal. Redirigiendo en <span id="countdown">10</span> segundos...</p>
     </div>
 
     <div id="intro" class="section" style="display:none;">
@@ -41,15 +25,17 @@
         <button id="showMessagesBtn" class="btn">Sí</button>
         <button id="showExtraMessagesBtn" class="btn">No</button>
         <button onclick="goToSection('intro')" class="btn">Regresar</button>
+        <div class="hidden-heart" onclick="revealCode('4')">💖</div>
     </div>
 
     <div id="section2" class="section" style="display:none;">
         <h2>Eres mi persona especial</h2>
         <p>No soy experto en amor, pero tú y yo juntos, eso sí que tiene sentido.</p>
-        <div id="hiddenArea" class="hidden-area">💖</div>
-        <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se siente diferente.</p>
+        <div class="hidden-heart" onclick="revealSecretMessage()">💖</div>
+        <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se siente en su justo tiempo, como si el destino hubiera decidido pausarse solo para nosotros.</p>
         <button onclick="goToSection('section3')" class="btn">Siguiente</button>
         <button onclick="goToSection('section1')" class="btn">Regresar</button>
+        <div class="hidden-heart" onclick="revealCode('2')">💖</div>
     </div>
 
     <div id="section3" class="section" style="display:none;">
@@ -57,6 +43,7 @@
         <p>Espero que todo esto haya sido agradable para ti y que te lo hayas pasado bien.</p>
         <button onclick="showUnlockCode()" class="btn">¿Listo para la sorpresa final?</button>
         <button onclick="goToSection('section2')" class="btn">Regresar</button>
+        <div class="hidden-heart" onclick="revealCode('0')">💖</div>
     </div>
 
     <div id="unlockSection" class="section" style="display:none;">
@@ -70,14 +57,14 @@
 
     <div id="finalSurprise" class="section" style="display:none;">
         <h2>Mi confesión más sincera</h2>
-        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar.</p>
+        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar. ¡Feliz San Valentín!</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
         <button onclick="goToSection('section3')" class="btn">Regresar</button>
     </div>
 
     <div id="thankYou" class="section" style="display:none;">
         <p>Gracias por ser increíble. ¡Te deseo un hermoso San Valentín! 💖</p>
-        <div id="finalHiddenArea" class="hidden-area">💖</div>
+        <div class="hidden-heart" onclick="revealSecretMessage()">💖</div>
         <p id="finalSecretMessage" class="hidden-message">Mi amor por ti es infinito y cada día crece más. Eres mi todo. 💘</p>
         <button onclick="goToSection('finalSurprise')" class="btn">Regresar</button>
     </div>
@@ -94,6 +81,6 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
